--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,6 +34,8 @@ section#login{
  height: 500px;
  border-radius: 20px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.507);
+ transition: width .3s, height .3s ;
+ transition-timing-function: ;
  
 }
 section#login > div#imagem{
