--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -15,7 +15,7 @@
     section#login{
         width:80vw;
     }
-    section#login >div#imagem{
+    section#login > div#imagem{
         float: left;
         width: 30%;
         height:100%;
@@ -23,6 +23,9 @@
     section#login>div#formulario{
         float:right;
         width:70%;
+    }
+    div#formulario >p{
+        font-size: 1em;
     }
 }
 @media screen and (min-width:992px) {
@@ -33,12 +36,18 @@
         width:950px;
     }
     section#login>div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
+    }
+    div#formulario>h1{
+        font-size: 2em;
+    }
+    div#formulario> p {
+        font-size: 1.2em;
     }
 }
