--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -14,6 +14,7 @@
     }
     section#login{
         width:80vw;
+        height:280px;
     }
     section#login > div#imagem{
         float: left;
@@ -34,6 +35,7 @@
     }
     section#login{
         width:950px;
+        height: 350px;
     }
     section#login>div#imagem{
         float: right;
