--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,6 +34,8 @@ section#login{
  height: 500px;
  border-radius: 20px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.507);
+
+ transform: translate(-50%,-50%);
  transition: width .3s, height .3s ;
  transition-timing-function:ease;
  
@@ -74,6 +76,7 @@ font-size: 2em;
 width: 40px;
 padding: 5px;
 position: relative;
+
 }
 
 div.campo {
@@ -90,7 +93,7 @@ div.campo {
 div.campo > input {
   background-color: #285554;
   font-size: 1em;
-  width: calc(100 - 40px);
+  width: calc(100 - 44px);
   height: 100%;
   border: none;
   border-radius: 8px;
